--- a/tile.html
+++ b/tile.html
@@ -2,6 +2,7 @@
   <head>
     <link href="http://common.melange:7776/main/theme" rel="stylesheet" type="text/css">
     <script src="http://common.melange:7776/js/jquery/1.11.1"></script>
+    <script src="http://common.melange:7776/js/melange/0.0.1"></script>
     <script src="news.js"></script>
     <style>
       body {
@@ -29,12 +30,15 @@
         margin-top: 5px;
         margin-bottom: 0;
       }
+      * {
+        cursor: hand;
+      }
     </style>
   </head>
-  <body style="background-image: url('http://static01.nyt.com/images/2014/07/06/magazine/06gop1/mag-06GOP-t_CA0-master1050.jpg');">
+  <body id="background" style="background-image: url('http://static01.nyt.com/images/2014/07/06/magazine/06gop1/mag-06GOP-t_CA0-master1050.jpg');">
     <div class="caption">
       <img src="/brands/nytimes.png" class="pull-left">
-      <p id="title">Can the G.O.P. Be a Party of Ideas?</p>
+      <p id="title">Loading News...</p>
       <small class="hidden-xs" id="caption">What Eric Cantor’s defeat means to “reformicons” and their attempt to reconnect Republicans to middle-class voters.</small>
     </div>
   </body>
